# django_admin_actions

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  cliff.toml  justfile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  new_feature.md
.github/workflows/: publish-to-pypi.yml  pytest.yml
docs/: conf.py  example_custom_actions.rst  example_library_usage.rst  index.rst
docs/api/: action_hero.actions.queue_celery.rst  action_hero.actions.rst  action_hero.actions.simple.rst  action_hero.lib.adminactionbaseclass.rst  action_hero.lib.rst  action_hero.rst  admin_actions.actions.rst  admin_actions.rst  modules.rst
src/action_hero/: lib.py
src/action_hero/actions/: __init__.py  queue_celery.py  simple.py
src/admin_actions/: lib.py
src/admin_actions/actions/: __init__.py  queue_celery.py  queue_pub_sub.py  simple.py
src/tests/: conftest.py  test_broadcast_pubsub.py  test_queue_celery.py  test_simple_action.py
tests/: conftest.py  settings.py  test_admin_action.py  test_queue_celery.py  test_simple_action.py
tests/app/: admin.py  apps.py  models.py
