[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "admin-actions"
dynamic = ["version"]
description = """
Django admin actions made more generic.

Easily create reusable admin actions for common tasks. Provides two usable
implementations and an ABC for creating your own implementations.
"""
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Kenneth Love", email = "11908+kennethlove@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=4.2.26", # Current 4.x LTS release as of 25/11/2025
]

[dependency-groups]
dev = [
    "celery-types==0.23.0",
    "django-stubs>=5.2.7",
    "faker>=38.2.0",
    "hatchling>=1.28.0",
    "pytest>=9.0.1",
    "pytest-celery>=1.2.1",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-randomly>=4.0.1",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-notfound-page>=1.1.0",
    "sphinx-rtd-theme>=3.0.2",
]

[project.optional-dependencies]
celery = [
    "celery>=5.5.3",
]

[tool.boa-restrictor]
exclude = [
    "PBR001"
]

[tool.hatch.version]
path = "src/admin_actions/__init__.py"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--randomly-seed=last --cov=admin_actions --cov-report=term-missing"
django_find_project = false
DJANGO_SETTINGS_MODULE = "tests.settings"
minversion = "6.0"
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff.lint]
# Avoiding flagging and removing any codes starting with `PBR` from any
# `# noqa` directives, despite Ruff's lack of support for `boa-restrictor`.
external = ["PBR", "DBR"]
